# saygo-png.github.io

./: .gitignore  .tmuxinator.yml  README.adoc  README.md  config.toml  devenv.nix  flake.nix  format.sh  index.html  index.xml  package-lock.json  package.json  shell.nix  site.hs  sitemap.xml  stack.yaml  style.css  website-ssg.cabal  website2.cabal
archetypes/: default.md
assets/: cat.js  normalize.css  style.css
categories/: index.html  index.xml
content/: blog1.md  education_flaws.md  hugohelp.md  migrating_to_hugo.md  my_experience_with_hyprland.md  predictions.md  test-entry.md  test.md
css/: default.css
layouts/: index.html
migrating_to_hugo/: index.html
nix/: cabal2nix-result.nix  package.nix  treefmt.nix
posts/: 2024-02-03-migrating_to_hugo.md  2024-02-11-predictions.md  2024-09-27-my_experience_with_hyprland.md
predictions/: index.html
public/: cat.js  index.html  index.xml  sitemap.xml  style.min.0f26fa28c2ff66dc315f277d5df6e969.css  style.min.0f860699056e74d0e333a77f6b062344.css  style.min.185fa8a8343cf16c2915567a973dfd9a.css  style.min.1f1557a358abfef29490fcac1686b710.css  style.min.23b790a33e1f3bcba9a4b69cc2749c93.css  style.min.25370dc561661de7a1663873233a2b37.css  style.min.29007db2d4abede9328fbcc1428e82bb.css  style.min.322959974f7d591bef013e98835aaff4.css  style.min.32b66b6af05fdb9d3e2bc7dc3d2aa494.css  style.min.424a29f880ec5e95d6a76de5f8d60bb7.css  style.min.43fd11d95644a2bf3f086cee9d761e57.css  style.min.5214ceabfbef20b57e6595d4698a9974.css  style.min.58b18cfe5fc1e7e6a24c0ef0bfd19828.css  (+35 more)
static/: style.css
tags/: index.html  (+1 more)
(+37 files in other folders)
