name:               website2
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
author:          saygo-png
maintainer:      saygo-png <saygo.mail@proton.me>
copyright:       2024 saygo-png
tested-with:     GHC ==9.8.4

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , time
                  , filepath
                  , unordered-containers
                  , hashable
                  , path

  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded
  default-language: GHC2021
